--- a/gluten-free-multipurpose-mix.html
+++ b/gluten-free-multipurpose-mix.html
@@ -26,8 +26,8 @@
             <div class="modal-content fstmodalbg">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 <div class="modalcontwidth">
-                    <p><strong> Psyllium husk has been used in cooking from time immemorial.</strong></p>
-                    <p>We figured out that it helps us make incredible <strong>gluten free</strong> mix that can inspire you to whip up delightful food.</p>
+                    <p> Psyllium husk has been used in cooking from time immemorial. </p>
+                    <p>We figured out that it helps us make incredible gluten free mix that can inspire you to whip up delightful food.</p>
                 </div>
             </div>
         </div>
@@ -171,153 +171,153 @@
             <div class="tablelistsec">
                 <div class="verticalline"></div>
                 <div class="tabletyperowline">
-                    <div class="lfttabletypepart"><div class="heading">Nutritional Information*</div></div>
-                    <div class="midtabletypepart"><div class="heading">Per 100g</div></div>
-                    <div class="ryttabletypepart"><div class="heading">Per serve (g)</div></div>
-                    <div class="extraryttabletypepart"><div class="heading">% RDA** per serve</div></div>
+                    <div class="lfttabletypepart"><div class="heading"><strong>Nutritional Information*</strong></div></div>
+                    <div class="midtabletypepart"><div class="heading"><strong>Per 100g</strong></div></div>
+                    <div class="ryttabletypepart"><div class="heading"><strong>Per serve (g)</strong></div></div>
+                    <div class="extraryttabletypepart"><div class="heading"><strong>% RDA** per serve</strong></div></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon01.svg"> -->
-                            <p><strong>Energy (kcal)</strong></p>
+                            <p>Energy (kcal)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>317.97</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>158.98</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>7.9</strong></p></div>
+                    <div class="midtabletypepart"><p>317.97</p></div>
+                    <div class="ryttabletypepart"><p>158.98</p></div>
+                    <div class="extraryttabletypepart"><p>7.9</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon02.svg"> -->
-                            <p><strong>Protein (g)</strong></p>
+                            <p>Protein (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>2.24</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>1.12</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>2.24</p></div>
+                    <div class="ryttabletypepart"><p>1.12</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon03.svg"> -->
-                            <p><strong>Carbohydrate (g)</strong></p>
+                            <p>Carbohydrate (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>75.63</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>37.82</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>75.63</p></div>
+                    <div class="ryttabletypepart"><p>37.82</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon04.svg"> -->
-                            <p><strong>Total sugars (g)</strong></p>
+                            <p>Total sugars (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.10</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.05</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>0.10</p></div>
+                    <div class="ryttabletypepart"><p>0.05</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon05.svg"> -->
-                            <p><strong>Added sugars (g)</strong></p>
+                            <p>Added sugars (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.0</strong></p></div>
+                    <div class="midtabletypepart"><p>0.00</p></div>
+                    <div class="ryttabletypepart"><p>0.00</p></div>
+                    <div class="extraryttabletypepart"><p>0.0</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon06.svg"> -->
-                            <p><strong>Total Fat (g)</strong></p>
+                            <p>Total Fat (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.23</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.11</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.2</strong></p></div>
+                    <div class="midtabletypepart"><p>0.23</p></div>
+                    <div class="ryttabletypepart"><p>0.11</p></div>
+                    <div class="extraryttabletypepart"><p>0.2</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon01.svg"> -->
-                            <p><strong>Saturated fat (g)</strong></p>
+                            <p>Saturated fat (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.09</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.05</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.2</strong></p></div>
+                    <div class="midtabletypepart"><p>0.09</p></div>
+                    <div class="ryttabletypepart"><p>0.05</p></div>
+                    <div class="extraryttabletypepart"><p>0.2</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon02.svg"> -->
-                            <p><strong>Trans fat (g) </strong></p>
+                            <p>Trans fat (g) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.0</strong></p></div>
+                    <div class="midtabletypepart"><p>0.00</p></div>
+                    <div class="ryttabletypepart"><p>0.00</p></div>
+                    <div class="extraryttabletypepart"><p>0.0</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon03.svg"> -->
-                            <p><strong>Cholesterol (mg) </strong></p>
+                            <p>Cholesterol (mg) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>0.00</p></div>
+                    <div class="ryttabletypepart"><p>0.00</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon04.svg"> -->
-                            <p><strong>Sodium (mg) </strong></p>
+                            <p>Sodium (mg) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>563.90 </strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>281.95</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>14.1</strong></p></div>
+                    <div class="midtabletypepart"><p>563.90 </p></div>
+                    <div class="ryttabletypepart"><p>281.95</p></div>
+                    <div class="extraryttabletypepart"><p>14.1</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon05.svg"> -->
-                            <p><strong>Dietary Fibre (g) </strong></p>
+                            <p>Dietary Fibre (g) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>2.22</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>1.11</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>2.22</p></div>
+                    <div class="ryttabletypepart"><p>1.11</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon06.svg"> -->
-                            <p><strong>Iron (mg) </strong></p>
+                            <p>Iron (mg) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>3.13 </strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>1.56</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>3.13 </p></div>
+                    <div class="ryttabletypepart"><p>1.56</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon06.svg"> -->
-                            <p><strong>Calcium (mg) </strong></p>
+                            <p>Calcium (mg) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>17.30</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>8.65 </strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>17.30</p></div>
+                    <div class="ryttabletypepart"><p>8.65 </p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
             </div>
             <div class="btmtablelistsec">
