--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 <div class="modalcontwidth">
                     <p>We're an</p>
-                    <p> <strong> AOECS-certified gluten free brand  in India, driven by taste. </strong>
+                    <p>AOECS-certified gluten free brand  in India, driven by taste.
                      It's like having a chef working with only clean and safe ingredients for your tummy's delight
                     </p>
                 </div>
@@ -38,7 +38,7 @@
                     <p>Our</p>
                     <p>AOECS certification process took multiple recipe iterations
                         with an eye for safety and ingredient quality. <br>
-                      <strong> Perfectionism level: <br> Slightly obsessive </strong>
+                      Perfectionism level: <br> Slightly obsessive  
                     </p>
                 </div>
             </div>
