--- a/recipe.html
+++ b/recipe.html
@@ -67,7 +67,7 @@
                     <div class="lftrecipecontsec">
                         <h1>Every Recipe, a <span style="color: #1F4F8F;">Gluten Free</span> Celebration</h1>
                         <h2>"The 1:1 Miracle That Breaks All Baking Rules"</h2>
-                        <p>Discover the joy of <strong>gluten free cooking with Reliteaur.</strong> <br> We believe food should be an adventure, not a compromise. <br> From tasty chapathis and pooris to scrumptious cakes, cookies and fluffy pancakes, explore easy, indulgent recipes that will delight your taste buds — <strong>no compromises, just pure flavour.</strong></p>
+                        <p>Discover the joy of gluten free cooking with Reliteaur. <br> We believe food should be an adventure, not a compromise. <br> From tasty chapathis and pooris to scrumptious cakes, cookies and fluffy pancakes, explore easy, indulgent recipes that will delight your taste buds — no compromises, just pure flavour.</p>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
