--- a/gluten-free-pancake-mix.html
+++ b/gluten-free-pancake-mix.html
@@ -22,7 +22,7 @@
             <div class="modal-content sndmodalbg">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 <div class="modalcontwidth">
-                    <p><strong>Bengal gram</strong> (Chickpea flour) <br> <strong>has been used in Indian <br> cooking for ages. <br> We just made it pancake-ready!</strong></p>
+                    <p> Bengal gram (Chickpea flour) <br>  has been used in Indian <br> cooking for ages. <br> We just made it pancake-ready!</p>
                 </div>
             </div>
         </div>
@@ -166,153 +166,153 @@
             <div class="tablelistsec">
                 <div class="verticalline"></div>
                 <div class="tabletyperowline">
-                    <div class="lfttabletypepart"><div class="heading">Nutritional Information*</div></div>
-                    <div class="midtabletypepart"><div class="heading">Per 100g</div></div>
-                    <div class="ryttabletypepart"><div class="heading">Per serve (g)</div></div>
-                    <div class="extraryttabletypepart"><div class="heading">% RDA** per serve</div></div>
+                    <div class="lfttabletypepart"><div class="heading"><strong>Nutritional Information*</strong></div></div>
+                    <div class="midtabletypepart"><div class="heading"><strong>Per 100g</strong></div></div>
+                    <div class="ryttabletypepart"><div class="heading"><strong>Per serve (g)</strong></div></div>
+                    <div class="extraryttabletypepart"><div class="heading"><strong>% RDA** per serve</strong></div></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon01.svg"> -->
-                            <p><strong>Energy (kcal)</strong></p>
+                            <p>Energy (kcal)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>326.53</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>163.26</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>8.2</strong></p></div>
+                    <div class="midtabletypepart"><p>326.53</p></div>
+                    <div class="ryttabletypepart"><p>163.26</p></div>
+                    <div class="extraryttabletypepart"><p>8.2</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon02.svg"> -->
-                            <p><strong>Protein (g)</strong></p>
+                            <p>Protein (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>2.49</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>1.24</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>2.49</p></div>
+                    <div class="ryttabletypepart"><p>1.24</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon03.svg"> -->
-                            <p><strong>Carbohydrate (g)</strong></p>
+                            <p>Carbohydrate (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>77.14</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>38.57</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>77.14</p></div>
+                    <div class="ryttabletypepart"><p>38.57</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon04.svg"> -->
-                            <p><strong>Total sugars (g)</strong></p>
+                            <p>Total sugars (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>14.80</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>7.40</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>14.80</p></div>
+                    <div class="ryttabletypepart"><p>7.40</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon05.svg"> -->
-                            <p><strong>Added sugars (g)</strong></p>
+                            <p>Added sugars (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>14.43</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>7.21</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>14.4</strong></p></div>
+                    <div class="midtabletypepart"><p>14.43</p></div>
+                    <div class="ryttabletypepart"><p>7.21</p></div>
+                    <div class="extraryttabletypepart"><p>14.4</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon06.svg"> -->
-                            <p><strong>Total Fat (g)</strong></p>
+                            <p>Total Fat (g)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.43</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.21</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.3</strong></p></div>
+                    <div class="midtabletypepart"><p>0.43</p></div>
+                    <div class="ryttabletypepart"><p>0.21</p></div>
+                    <div class="extraryttabletypepart"><p>0.3</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon01.svg"> -->
-                            <p><strong>Saturated fat (g) </strong></p>
+                            <p>Saturated fat (g) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.11</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.05</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.2 </strong></p></div>
+                    <div class="midtabletypepart"><p>0.11</p></div>
+                    <div class="ryttabletypepart"><p>0.05</p></div>
+                    <div class="extraryttabletypepart"><p>0.2 </p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon02.svg"> -->
-                            <p><strong>Trans fat (g) </strong></p>
+                            <p>Trans fat (g) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>0.0 </strong></p></div>
+                    <div class="midtabletypepart"><p>0.00</p></div>
+                    <div class="ryttabletypepart"><p>0.00</p></div>
+                    <div class="extraryttabletypepart"><p>0.0 </p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon03.svg"> -->
-                            <p><strong>Cholesterol (mg)</strong></p>
+                            <p>Cholesterol (mg)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>0.00 </strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>0.00</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>0.00 </p></div>
+                    <div class="ryttabletypepart"><p>0.00</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon04.svg"> -->
-                            <p><strong>Sodium (mg)</strong></p>
+                            <p>Sodium (mg)</p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>451.39</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>225.70  </strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>11.3</strong></p></div>
+                    <div class="midtabletypepart"><p>451.39</p></div>
+                    <div class="ryttabletypepart"><p>225.70  </p></div>
+                    <div class="extraryttabletypepart"><p>11.3</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon05.svg"> -->
-                            <p><strong>Dietary Fibre (g) </strong></p>
+                            <p>Dietary Fibre (g) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>2.09 </strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>1.04</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>2.09 </p></div>
+                    <div class="ryttabletypepart"><p>1.04</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon06.svg"> -->
-                            <p><strong>Iron (mg) </strong></p>
+                            <p>Iron (mg) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>3.06</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>1.53</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>3.06</p></div>
+                    <div class="ryttabletypepart"><p>1.53</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
                 <div class="tabletyperowline">
                     <div class="lfttabletypepart">
                         <div class="midtablettypemiddlepart">
                             <!-- <img src="images/icon06.svg"> -->
-                            <p><strong>Calcium (mg) </strong></p>
+                            <p>Calcium (mg) </p>
                         </div>
                     </div>
-                    <div class="midtabletypepart"><p><strong>17.01</strong></p></div>
-                    <div class="ryttabletypepart"><p><strong>8.50</strong></p></div>
-                    <div class="extraryttabletypepart"><p><strong>-</strong></p></div>
+                    <div class="midtabletypepart"><p>17.01</p></div>
+                    <div class="ryttabletypepart"><p>8.50</p></div>
+                    <div class="extraryttabletypepart"><p>-</p></div>
                 </div>
             </div>
             <div class="btmtablelistsec">
