--- a/recipe.html
+++ b/recipe.html
@@ -277,14 +277,15 @@
                                     <div class="row">
                                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                             <ul>
-                                                <li>Phone: <a href="#">1800 425 4305</a></li>
-                                                <li>GSTIN: <a href="#">32AALCR7773F1Z3</a></li>
-                                                <li class="contact-email">Email: <a href="#">customercare@reliteaur.com</a></li>
+                                                <li>Phone: 1800 425 4305</li>
+                                                <li>GSTIN: 32AALCR7773F1Z3</li>
+                                                <li class="contact-email">Email: <a href="mailto:customercare@reliteaur.com">customercare@reliteaur.com</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                             <ul>
-                                                <li><a href="#">37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</a></li>
+                                                <li><strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</li>
+                                                 <li><strong>Marketing Office:</strong> <br> Elite Natural Pvt Ltd, 3rd Floor, Unitus/Shakthi Rise Building, 2150, 17th Main Rd, HAL 2nd Stage, Indiranagar, Bengaluru, Karnataka 560008, Contact: +91- 9739008624</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -340,10 +341,11 @@
                         <div class="ftrlinksec">
                             <h2>Contact Us</h2>
                                 <ul>
-                                    <li>Phone: <a href="#">1800 425 4305</a></li>
-                                    <li>GSTIN: <a href="#">32AALCR7773F1Z3</a></li>
-                                    <li>Email: <a class="" href="#">customercare@reliteaur.com</a></li>
-                                    <li><a href="#">37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</a></li>
+                                    <li>Phone: 1800 425 4305</li>
+                                    <li>GSTIN:  32AALCR7773F1Z3 </li>
+                                    <li>Email: <a class="" href="mailto:customercare@reliteaur.com">customercare@reliteaur.com</a></li>
+                                                <li> <strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581 </li>
+                                                 <li><strong>Marketing Office:</strong> <br> Elite Natural Pvt Ltd, 3rd Floor, Unitus/Shakthi Rise Building, 2150, 17th Main Rd, HAL 2nd Stage, Indiranagar, Bengaluru, Karnataka 560008, Contact: +91- 9739008624 </li>
                                 </ul> 
                         </div>
                     </div>
