--- a/blog.html
+++ b/blog.html
@@ -732,28 +732,32 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-xl-7 col-lg-7 col-md-7 col-12">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-12">
                                 <div class="ftrlinksec">
                                     <h2>Contact Us</h2>
                                     <div class="row">
                                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                             <ul>
-                                                <li>Phone: 1800 425 4305</li>
+                                                <li>Phone:<br>  1800 425 4305</li>
                                                 <li>GSTIN: 32AALCR7773F1Z3</li>
-                                                <li class="contact-email">Email: <a
-                                                        href="mailto:customercare@reliteaur.com">customercare@reliteaur.com</a></li>
+                                                <li class="contact-email">Email: <a href="mailto:customercare@reliteaur.com">customercare@reliteaur.com</a></li>
                                             </ul>
                                         </div>
-                                        <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                                       
+                                    </div>
+                                </div>
+                            </div>
+
+                             <div class="col-xl-4 col-lg-4 col-md-4 col-12">
+                                 <div class="ftrlinksec">
+                                    <h2>Address</h2>
                                             <ul>
-                                                                                              <li><strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</li>
+                                                  <li><strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</li>
                                                  <li><strong>Marketing Office:</strong> <br> Elite Natural Pvt Ltd, 3rd Floor, Unitus/Shakthi Rise Building, 2150, 17th Main Rd, HAL 2nd Stage, Indiranagar, Bengaluru, Karnataka 560008Contact: +91- 9739008624</li>
 
                                             </ul>
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
+                                        </div>  
                             <div class="col-xl-2 col-lg-2 col-md-2 col-12">
                                 <div class="ftrlinksec">
                                     <h2>Follow us</h2>
@@ -807,7 +811,7 @@
                                 <li>Phone: 1800 425 4305</li>
                                 <li>GSTIN: 32AALCR7773F1Z3</li>
                                 <li>Email: <a class="" href="mailto:customercare@reliteaur.com">customercare@reliteaur.com</a></li>
-                                                                               <li><strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</li>
+                                                 <li><strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</li>
                                                  <li><strong>Marketing Office:</strong> <br> Elite Natural Pvt Ltd, 3rd Floor, Unitus/Shakthi Rise Building, 2150, 17th Main Rd, HAL 2nd Stage, Indiranagar, Bengaluru, Karnataka 560008, Contact: +91- 9739008624</li>
 
                             </ul>
