--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                                     <h2>Address</h2>
                                             <ul>
                                                   <li><strong>Manufacturing Address:</strong> <br> 37/40 A, Sidco Industrial Estate, Peringandoor.P.O, Athani, Peringandoor, Thrissur, Kerala, 680581</li>
-                                                 <li><strong>Marketing Office:</strong> <br> Elite Natural Pvt Ltd, 3rd Floor, Unitus/Shakthi Rise Building, 2150, 17th Main Rd, HAL 2nd Stage, Indiranagar, Bengaluru, Karnataka 560008Contact: +91- 9739008624</li>
+                                                 <li><strong>Marketing Office:</strong> <br> Elite Natural Pvt Ltd, 3rd Floor, Unitus/Shakthi Rise Building, 2150, 17th Main Rd, HAL 2nd Stage, Indiranagar, Bengaluru, Karnataka 560008, Contact: +91- 9739008624</li>
 
                                             </ul>
                                         </div>
