--- a/gluten-free-chapathi-mix.html
+++ b/gluten-free-chapathi-mix.html
@@ -48,7 +48,7 @@
                 </li>
             <li><a href="recipe.html">Gluten Free Recipes</a></li>
             <li><a href="blog.html">Blogs</a></li>
-            <li><a href="#footer">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
     <nav class="navbar navbar-expand-lg headersec">
@@ -68,7 +68,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="recipe.html">Gluten Free Recipes</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blogs</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#footer">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <a href="javascript:void(0)" id="fadeButton" class="mobhamburger"></a>
