--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,17 @@
 /* ==================== DEFAULT (DESKTOP) ==================== */
 .contact-wrapper {
     height: 100vh;
+    min-height: 1100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 50px;
     padding-top: 150px;
-    background: #b56a29;
     flex-wrap: wrap;
-    background-image: url(../images/img01.jpg);
+    background-image: url(./images/contact_img.png);
     background-size: cover;
     background-repeat: no-repeat;
+  
 }
 
 /* LEFT SECTION */
@@ -55,7 +56,7 @@
     font-size: var(--size-130);
     font-weight: normal;
     color: #fff;
-    margin-top: -150px;
+    margin-top: -250px;
 }
 
 /* RIGHT SECTION */
@@ -148,10 +149,12 @@ input:placeholder-shown{
 @media (max-width: 768px) {
 
     .contact-wrapper {
+        min-height: 850px;
         flex-direction: column;
         text-align: center;
         height: auto;
         padding-top: 80px;
+        justify-content: start;
     }
 
     .contact-left,
@@ -174,6 +177,9 @@ input:placeholder-shown{
 
 /* ==================== 480px (Mobile) ==================== */
 @media (max-width: 480px) {
+     .contact-wrapper{
+        min-height: 780px;
+     }
 
     .contact-heading {
         padding-bottom: 25px;
@@ -206,6 +212,8 @@ input:placeholder-shown{
         width: 100% !important;       /* ← full width */
     }
 }
+
+
 
 
 </style>
